<resources>
    <string name="app_name">WiFi Auto Authenticator</string>
    <string name="app_about">Build: %1$d. Version: %2$s.</string>
    <string name="app_privacy_policy" translatable="false">Privacy Policy: https://moravek.me/android/wifi-auto-authenticator/#privacy-policy</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="action_retry">Retry</string>
    <string name="action_about">About</string>
    <string name="action_pick">Pick</string>
    <string name="action_data_switch">Mobile Data Switch</string>
    <string name="toast_data_switch_on">Mobile data switched on</string>
    <string name="toast_data_switch_off">Mobile data switched off</string>
    <string name="snack_autologin_switch_on">Autologin switched on</string>
    <string name="snack_autologin_switch_off">Autologin switched off</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_login">Sign in</string>
    <string name="action_logout">Sign out</string>
    <string name="message_network_no">Network connection not found</string>
    <string name="message_network_wifi">Network over WiFi is not preferred</string>
    <string name="message_settings_notset">Application settings have not been filled-out</string>
    <string name="message_network_notset">WiFi network is not set</string>
    <string name="message_credentials_notset">Username or password is not set</string>
    <string name="message_network_match">Network %s was not found</string>
    <string name="message_signedout">Captivity portal was detected</string>
    <string name="message_signedin">Network over WiFi is working</string>
    <string name="message_working">Working \u2026</string>
    <string name="message_response_ok">HTTP request was sent</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_network_error">HTTP request exception</string>
    <string name="error_cancelled">HTTP request cancelled</string>
    <string name="error_unknown">Unknown error</string>
    <string name="error_task_already_running">This process is already running …</string>
    <string name="error_failed_login">Login failed</string>
    <string name="error_autologin_disabled">Can\'t enable autologin due to the limitations of background usage on Android Oreo or newer</string>

    <!-- Example General settings -->
    <string name="pref_autologin_title">Autologin</string>
    <string name="pref_autologin_description">Enables autologin if the device is on WiFi</string>
    <string name="pref_username_title">Username</string>
    <string name="pref_username_description">Username for login to the Cisco Web Auth page</string>
    <string name="pref_password_title">Password</string>
    <string name="pref_password_description">Password for login to the Cisco Web Auth page</string>
    <string name="pref_portalurl_title">Portal URL</string>
    <string name="pref_portalurl_description">Login portal URL will be stored here after a successful parse from the HTTP redirect response</string>

    <string name="message_swipe_to_refresh">Swipe to check for redirect</string>
    <string name="state_icon">State Icon</string>
    <string name="action_send_feedback">Send Feedback</string>
    <string name="feedback_intro_text">Please describe the issue you are experiencing:</string>
    <string name="action_close">Close</string>
    <string name="pref_expert_title">Expert Mode</string>
    <string name="pref_expert_description">The app will not restrict usability of UI elements according to the detected state. Can cause unintended behavior.</string>

</resources>
