<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".LoginActivity">
    <item
        android:id="@+id/action_data_switch"
        android:title="@string/action_data_switch"
        android:orderInCategory="10"
        android:icon="@drawable/ic_menu_data"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        android:icon="@drawable/ic_menu_settings"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_about"
        android:title="@string/action_about"
        android:orderInCategory="100"
        android:icon="@drawable/ic_menu_info"
        app:showAsAction="ifRoom" />
</menu>